--- a/.gitignore
+++ b/.gitignore
@@ -7,10 +7,19 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Node modules
 node_modules
+
+# Build outputs
 dist
 dist-ssr
+
+# Local env files
 *.local
+.env
+
+# SQLite
+*.sqlite
 
 # Editor directories and files
 .vscode/*
